Alterando a tela do monitor para ter o start e stop

--- a/src/main/resources/br/com/automacaowebia/dashboard.css
+++ b/src/main/resources/br/com/automacaowebia/dashboard.css
@@ -138,3 +138,7 @@
     -fx-border-color: #333333;          /* borda sutil */
     -fx-border-width: 1px;
 }
+
+#startButton:hover {
+    -fx-background-color: linear-gradient(to bottom right, #388E3C, #2E7D32); /* hover verde só no Start */
+}
