--- a/src/main/resources/br/com/automacaowebia/dashboard.fxml
+++ b/src/main/resources/br/com/automacaowebia/dashboard.fxml
@@ -366,7 +366,7 @@
                                 </Button>
                             </children>
                         </AnchorPane>
-                        <AnchorPane fx:id="impressao_zpl" layoutX="-1.0" layoutY="55.0" prefHeight="639.0" prefWidth="807.0" stylesheets="@dashboard.css" visible="true">
+                        <AnchorPane fx:id="impressao_zpl" layoutX="-1.0" layoutY="55.0" prefHeight="639.0" prefWidth="807.0" stylesheets="@dashboard.css" visible="false">
 
                             <children>
                                 <VBox alignment="TOP_LEFT" prefWidth="820" spacing="20">
@@ -439,12 +439,7 @@
                                     <Separator />
                                     <VBox spacing="6">
                                         <Label styleClass="label-bold" text="Log de impressão" />
-                                        <TextArea fx:id="txtLogPrint"
-                                                  editable="false"
-                                                  prefHeight="150.0"
-                                                  prefWidth="780.0"
-                                                  wrapText="true"
-                                                  styleClass="log-area"/>
+                                        <TextArea fx:id="txtLogPrint" editable="false" prefHeight="150.0" prefWidth="780.0" styleClass="log-area" wrapText="true" />
                                     </VBox>
                                     <Separator />
                                     <!--  BARRA DE PROGRESSO + BOTÃO IMPRIMIR -->
@@ -459,7 +454,7 @@
                                 </VBox>
                             </children>
                         </AnchorPane>
-                        <AnchorPane fx:id="monitor_pane" layoutX="-1.0" layoutY="55.0" prefHeight="639" prefWidth="820" stylesheets="@dashboard.css" visible="false">
+                        <AnchorPane fx:id="monitor_pane" layoutX="-1.0" layoutY="55.0" prefHeight="639" prefWidth="820" stylesheets="@dashboard.css" visible="true">
 
                             <children>
                                 <VBox alignment="TOP_LEFT" prefHeight="639" prefWidth="820" spacing="11.0">
@@ -478,7 +473,7 @@
                                         <TextArea fx:id="txtLog" editable="false" prefHeight="153.0" prefRowCount="10" prefWidth="780.0" styleClass="log-area" wrapText="true" />
                                     </VBox>
 
-                                    <GridPane alignment="BOTTOM_LEFT" hgap="10" prefHeight="424.0" prefWidth="780.0" vgap="10">
+                                    <GridPane alignment="BOTTOM_LEFT" hgap="10" prefHeight="311.0" prefWidth="775.0" vgap="10">
 
                                         <!-- 4 colunas ⇒ 15 % + 35 %  |  15 % + 35 % -->
                                         <columnConstraints>
@@ -546,9 +541,17 @@
                                     <HBox alignment="CENTER_RIGHT" spacing="10">
                                         <ProgressBar fx:id="barStatus" prefWidth="360" visible="false" />
 
-                                        <Button fx:id="btnImprimir" disable="${controller.botaoDesabilitado}" onAction="#imprimir" prefWidth="110" styleClass="print" text="Imprimir">
+                                        <!-- START -->
+                                        <Button id="startButton" fx:id="btnStart" onAction="#onStart" prefWidth="130" styleClass="print" text="Iniciar">
                                             <graphic>
-                                                <FontAwesomeIconView fill="WHITE" glyphName="PRINT" />
+                                                <FontAwesomeIconView fill="WHITE" glyphName="PLAY" />
+                                            </graphic>
+                                        </Button>
+
+                                        <!-- STOP -->
+                                        <Button fx:id="btnStop" disable="true" onAction="#onStop" prefWidth="110" styleClass="delete" text="Parar">
+                                            <graphic>
+                                                <FontAwesomeIconView fill="WHITE" glyphName="STOP" />
                                             </graphic>
                                         </Button>
                                     </HBox>
